--- a/dashboard_app/templates/login.html
+++ b/dashboard_app/templates/login.html
@@ -2,6 +2,8 @@
 
 {% block title %}Connexion Sécurisée | Banque Pro{% endblock %}
 
+{% block app_background %}{% endblock %}
+
 {% block content %}
 <div class="min-h-screen flex bg-white">
     <!-- Left Side: Branding & Visuals -->
