Ap v2.2 (implementation des graphiques et d'un TCD)

--- a/dashboard_app/templates/base.html
+++ b/dashboard_app/templates/base.html
@@ -17,6 +17,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ag-grid-community@31.3.1/styles/ag-theme-quartz.css" />
     <script src="https://cdn.jsdelivr.net/npm/ag-grid-community@31.3.1/dist/ag-grid-community.min.js"></script>
 
+    <!-- ECharts -->
+    <script src="https://cdn.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         /* Modern Skeleton Loading Animation */
